# nvosx

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  antigen.sh  autogen.sh  configure.ac  configure.scan  nvram-1.0.pc.in
conf/: Makefile.am  nvram.conf  nvram.default  openwrt-update-tz.sh  openwrt_tz.conf  timezone-2013.conf  timezone-openwrt-2015.conf  timezone-openwrt-2015d.conf  timezone-openwrt-2015g.conf  timezone.conf
host/: Makefile.am  commit  commit.jackie  commit.macosx  remove_shm.sh
include/: Makefile.am  nvram.h  shutils.h  typedefs.h
src/: Makefile.am  nvlist.c  nvram.c  nvram_main.c  remove_shm.csh  remove_shm.sh  shutils.c  test_nvlist.sh  test_nvram.sh
testcase/: Makefile.am  test.c  test_nvram.sh
